fixed home page grid layout issue

--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -163,11 +163,11 @@ p.subtitle {
 .rect-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
     gap: 20px;
-    max-width: 1100px;
-    margin: 0 auto;
-    width: fit-content;
+    justify-content: flex-start;
+    width: calc(3 * 350px + 2 * 20px);
+    margin: auto;
+    margin-bottom: 100px;
 }
 
 .rect {
@@ -293,3 +293,16 @@ p.subtitle {
     height: 300px;
     object-fit: contain;
 }
+
+/* Responsive */
+@media (max-width: 1000px) {
+    .rect-container {
+        width: calc(2 * 350px + 2 * 20px);
+    }
+  }
+  
+  @media (max-width: 768px) {  
+    .rect-container {
+        width: calc(1 * 350px);
+    }
+  } 
